--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -31,6 +31,9 @@
     "@uniswap/sdk": "^3.0.3",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@walletconnect/web3-provider": "^1.3.1",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/network-connector": "^6.1.9",
     "antd": "^4.7.0",
     "apollo-boost": "^0.4.9",
     "apollo-client": "^2.6.10",
